--- a/pusher2.html
+++ b/pusher2.html
@@ -18,7 +18,7 @@
 			  encrypted: true
 			});
 
-			var channel = pusher.subscribe('test_channel1');
+			var channel = pusher.subscribe('test_channel');
 			channel.bind('my_event', function(data) {
 				console.log(data);
 			  alert(data.message);
